test/nextjs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs
  namespace: nextjs-test
spec:
  ingressClassName: traefik

  rules:
    - host: nextjs-test.veecodekub.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs
                port:
                  number: 80
